# Incus-MacOS-Toolkit

./: .gitignore  .gitmodules  CREDITS.md  Makefile  README.md  ruff.toml
.github/workflows/: btrfs-devel-sync.yml  ci.yml  mirror-osp-to-ooc.yaml
boot/: libvirt-domain.xml
btrfs-devel/: README.md
btrfs-dwarfs/: .clang-format  .gitignore  Makefile  README.md
btrfs-dwarfs/.github/: labeler.yml
btrfs-dwarfs/.github/workflows/: ci.yml
btrfs-dwarfs/boot/: bdfs-image-update  install.sh
btrfs-dwarfs/boot/doc/: boot-integration.md
btrfs-dwarfs/boot/dracut/: bdfs-root.sh  module-setup.sh
btrfs-dwarfs/boot/initramfs/hooks/: bdfs
btrfs-dwarfs/boot/initramfs/scripts/: bdfs-root
btrfs-dwarfs/boot/systemd-generator/: bdfs-image-update.service  bdfs-image-update.timer
btrfs-dwarfs/configs/: bdfs.conf  bdfs_daemon.service  bdfs_daemon.service.in  boot.conf
btrfs-dwarfs/doc/: architecture.md  bdfs.1  bdfs_daemon.8
btrfs-dwarfs/include/btrfs_dwarfs/: types.h
btrfs-dwarfs/include/uapi/: bdfs_ioctl.h
btrfs-dwarfs/kernel/: Makefile
btrfs-dwarfs/kernel/btrfs_dwarfs/: Kbuild  Kconfig  bdfs_blend.c  bdfs_btrfs_part.c  bdfs_dwarfs_part.c  bdfs_internal.h  bdfs_main.c
btrfs-dwarfs/scripts/: vm-install.sh
btrfs-dwarfs/tests/integration/: lib.sh  run_all.sh  test_blend_layer.sh  test_btrfs_partition.sh  test_dwarfs_partition.sh  test_kernel_module.sh  test_snapshot_lifecycle.sh
btrfs-dwarfs/tests/unit/: CMakeLists.txt  test_compression.c  test_copyup_job.c  test_exec_wrappers.c  test_job_alloc.c  test_policy_engine.c  test_socket_dispatch.c  test_uuid.c
btrfs-dwarfs/userspace/: CMakeLists.txt
btrfs-dwarfs/userspace/cli/: bdfs.h  bdfs_export_import.c  bdfs_main.c  bdfs_mount.c  bdfs_partition.c  bdfs_policy.c  bdfs_snapshot_promote_demote.c  bdfs_status.c  bdfs_verify.c
btrfs-dwarfs/userspace/daemon/: bdfs_daemon.c  bdfs_daemon.h  bdfs_exec.c  bdfs_jobs.c  bdfs_netlink.c  bdfs_policy.c  bdfs_policy.h  bdfs_socket.c
cmd/: mount.go  root.go  shell.go
compat/: .gitignore  .gitmodules  CREDITS.md  LICENSE  Makefile  README.md  install.sh
compat/bsdcoreutils/: README.md
compat/linuxify/: linuxify
compat/mlsblk/: Makefile
docs/: libkrun.md
incus/: optimize-guest.sh  profile.yaml  setup.sh
linuxfs/: CREDITS.md  Makefile  README.md  go.mod  main.go
linuxfs/.github/workflows/: ci.yml
linuxfs/cmd/: bdfs.go  clean.go  list.go  mount.go  root.go  shell.go  update_images.go  version.go
linuxfs/docs/: libkrun.md
linuxfs/integration/: vm_nfs_test.go
linuxfs/mount/: backends.go  setup.go  sshfs.go
linuxfs/vm/: arch.go  cloudinit.go  image.go  provider.go  provider_alpine.go  provider_debian.go  provider_fedora.go  provider_ubuntu.go  ssh.go  vm.go
macos-vm/: CONTRIBUTING.md  CREDITS.md  LICENSE  Makefile  README.md
macos-vm/boot/: boot.sh  libvirt-configure.sh
macos-vm/cli/: imt.sh  lib.sh
macos-vm/fetch/: convert-image.sh
macos-vm/guest-tools/: optimize.sh  useradd-bulk.sh
macos-vm/image-pipeline/: build-image.sh  fetch-macos.py
macos-vm/incus/: profile.yaml  setup.sh
macos-vm/templates/: dev.yaml  minimal.yaml  performance.yaml
macos-vm/tui/: imt-dashboard.sh
mlsblk/: mlsblk.c
mount/: backends.go
vm/: cloudinit.go  image.go  vm.go
